--- a/index.html
+++ b/index.html
@@ -1,7 +1,51 @@
 <Doctype HTML>
 <html>
 <head>
+  <title>HFW Architekten</title>
+  <meta charset="utf-8">
 </head>
 <body>
+  <header class="container" id="Header">
+    <h1>HFW Architekten</h1>
+    <navbar>
+      <a href="#Header">Start</a>
+      <a href="#Portfolio">Portfolio</a>
+      <a href="#Referenzen">Referenzen</a>
+      <a href="#Leistungen">Leistungen</a>
+      <a href="#Partner">Partner</a>
+      <a href="#Philosophie">Philosophie</a>
+      <a href="#Team">Team</a>
+      <a href="#Kontakt">Kontakt</a>
+      <a href="#Karriere">Karriere</a>
+      <a href="#Impressum">Impressum</a>
+    </navbar>
+  </header>
+  <div class="container" id="Portfolio">
+    <h2>Portfolio</h2>
+  </div>
+  <div class="container" id="Referenzen">
+    <h2>Referenzen</h2>
+  </div>
+  <div class="container" id="Leistungen">
+    <h2>Leistungen</h2>
+  </div>
+  <div class="container" id="Partner">
+    <h2>Partner</h2>
+  </div>
+  <div class="container" id="Philosophie">
+    <h2>Philosophie</h2>
+  </div>
+  <div class="container" id="Team">
+    <h2>Team</h2>
+  </div>
+  <div class="container" id="Kontakt">
+    <h2>Kontakt</h2>
+  </div>
+  <div class="container" id="Karriere">
+    <h2>Karriere</h2>
+  </div>
+  <div class="container" id="Impressum">
+    <h3>Impressum</h3>
+  </div>
 </body>
 </html>
