--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="#Referenzen">Referenzen</a>
       <a href="#Leistungen">Leistungen</a>
       <a href="#Partner">Partner</a>
-      <a href="#Philosophie">Philosophie test</a>
+      <a href="#Philosophie">Philosophie</a>
       <a href="#Team">Team</a>
       <a href="#Kontakt">Kontakt</a>
       <a href="#Karriere">Karriere</a>
