--- a/index.html
+++ b/index.html
@@ -20,29 +20,37 @@
       <a href="#Impressum">Impressum</a>
     </navbar>
   </header>
-  <div class="container" id="Portfolio">
-    <h2>Portfolio</h2>
-  </div>
   <div class="container" id="Referenzen">
     <h2>Referenzen</h2>
+    <p>Hier folgen die Logos der Firmen für die wir gearbeitet haben.</p>
+  </div>
+  <div class="container" id="Portfolio">
+    <h2>Portfolio</h2>
+    <p>Hier folgt eine Galerie mit Bildern unserer Gebäude.</p>
   </div>
   <div class="container" id="Leistungen">
     <h2>Leistungen</h2>
+    <p>Hier folgt eine Auflistung all unserer Leistungen.</p>
   </div>
   <div class="container" id="Partner">
     <h2>Partner</h2>
+    <p>Hier folgen die Logos unserer Partnerfirmen</p>
   </div>
   <div class="container" id="Philosophie">
     <h2>Philosophie</h2>
+    <p>Hier folgt die Philosophie,der unser Unternehmen folgt.</p>
   </div>
   <div class="container" id="Team">
     <h2>Team</h2>
+    <p>Hier folgen drei Bilder von den Teammitgliedern sowie je eine kurze Beschreibung.</p>
   </div>
   <div class="container" id="Kontakt">
     <h2>Kontakt</h2>
+    <p>Hier folgen Kontaktinformationen sowie eine Googlemaps-Einbindung mit unserem Standort.</p>
   </div>
   <div class="container" id="Karriere">
     <h2>Karriere</h2>
+    <p>Hier folgen ausklappbare Stellenausschreibungen sowie ein Bewerbungsformular.</p>
   </div>
   <div class="container" id="Impressum">
     <h3>Impressum</h3>
