--- a/index.html
+++ b/index.html
@@ -8,55 +8,77 @@
 <body>
   <header class="container" id="Header">
     <h1>HFW Architekten</h1>
+    <!--Menü-->
     <navbar>
-      <a href="#Header">Start</a>
-      <a href="#Referenzen">Referenzen</a>
-      <a href="#Portfolio">Portfolio</a>
-      <a href="#Leistungen">Leistungen</a>
-      <a href="#Partner">Partner</a>
-      <a href="#Philosophie">Philosophie</a>
-      <a href="#Team">Team</a>
-      <a href="#Kontakt">Kontakt</a>
-      <a href="#Karriere">Karriere</a>
-      <a href="#Impressum">Impressum</a>
+      <ul>
+        <li><a href="#Header">Start</a></li>
+        <li><a href="#Referenzen">Referenzen</a></li>
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#Leistungen">Leistungen</a></li>
+        <li><a href="#Partner">Partner</a></li>
+        <li><a href="#Philosophie">Philosophie</a></li>
+        <li><a href="#Team">Team</a></li>
+        <li><a href="#Kontakt">Kontakt</a></li>
+        <li><a href="#Karriere">Karriere</a></li>
+        <li><a href="#Impressum">Impressum</a></li>
+    </ul>
     </navbar>
   </header>
-  <div class="content">
+  <main>
     <div class="container" id="Referenzen">
       <h2>Referenzen</h2>
-      <p>Hier folgen die Logos der Firmen für die wir gearbeitet haben.</p>
+      <div class="logos">
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+      </div>
+      <p>Hier folgen die Logos der Firmen für die wir gearbeitet haben. <br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Portfolio">
       <h2>Portfolio</h2>
-      <p>Hier folgt eine Galerie mit Bildern unserer Gebäude.</p>
+      <figure class="hovertitle">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" />
+        <figcaption>
+          <h3>HTML <span>Tutorial</span></h3>
+        </figcaption>
+      </figure>
+      <p>Hier folgt eine Galerie mit Bildern unserer Gebäude.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Leistungen">
       <h2>Leistungen</h2>
-      <p>Hier folgt eine Auflistung all unserer Leistungen.</p>
+      <p>Hier folgt eine Auflistung all unserer Leistungen.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Partner">
       <h2>Partner</h2>
-      <p>Hier folgen die Logos unserer Partnerfirmen</p>
+      <div class="logos">
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+        <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+      </div>
+      <p>Hier folgen die Logos unserer Partnerfirmen<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Philosophie">
       <h2>Philosophie</h2>
-      <p>Hier folgt die Philosophie,der unser Unternehmen folgt.</p>
+      <p>Hier folgt die Philosophie,der unser Unternehmen folgt.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Team">
       <h2>Team</h2>
-      <p>Hier folgen drei Bilder von den Teammitgliedern sowie je eine kurze Beschreibung.</p>
+      <p>Hier folgen drei Bilder von den Teammitgliedern sowie je eine kurze Beschreibung.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Kontakt">
       <h2>Kontakt</h2>
-      <p>Hier folgen Kontaktinformationen sowie eine Googlemaps-Einbindung mit unserem Standort.</p>
+      <p>Hier folgen Kontaktinformationen sowie eine Googlemaps-Einbindung mit unserem Standort.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Karriere">
       <h2>Karriere</h2>
-      <p>Hier folgen ausklappbare Stellenausschreibungen sowie ein Bewerbungsformular.</p>
+      <p>Hier folgen ausklappbare Stellenausschreibungen sowie ein Bewerbungsformular.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Impressum">
       <h3>Impressum</h3>
     </div>
-  </div>
+  </main>
 </body>
 </html>
