--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <div class="container" id="Philosophie">
       <h2>Philosophie</h2>
       <p>Hier folgt die Philosophie,der unser Unternehmen folgt.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+      <p>Mit unserer Architektur möchten wir den hohen Ansprüchen unserer Kunden gerecht werden und sowohl professionelle Arbeitsumgebungen, als auch gemütliche Lebensräume schaffen.</p>
     </div>
     <div class="container" id="Team">
       <h2>Team</h2>
