neue Inhalte und besseres Layout

--- a/index.html
+++ b/index.html
@@ -35,16 +35,30 @@
         <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
         <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
       </div>
-      <p>Hier folgen die Logos der Firmen für die wir gearbeitet haben. <br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+      <p>Hier folgen die Logos der Firmen für die wir gearbeitet haben.</p>
     </div>
     <div class="container" id="Portfolio">
       <h2>Portfolio</h2>
-      <figure class="hovertitle">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" />
-        <figcaption>
-          <h3>HTML <span>Tutorial</span></h3>
-        </figcaption>
-      </figure>
+      <div class="galerie">
+        <figure class="hovertitle">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" />
+          <figcaption>
+            <h3>HTML <span>Tutorial</span></h3>
+          </figcaption>
+        </figure>
+        <figure class="hovertitle">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" />
+          <figcaption>
+            <h3>HTML <span>Tutorial</span></h3>
+          </figcaption>
+        </figure>
+        <figure class="hovertitle">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" />
+          <figcaption>
+            <h3>HTML <span>Tutorial</span></h3>
+          </figcaption>
+        </figure>
+      </div>
       <p>Hier folgt eine Galerie mit Bildern unserer Gebäude.<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
     </div>
     <div class="container" id="Leistungen">
@@ -58,7 +72,7 @@
         <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
         <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
       </div>
-      <p>Hier folgen die Logos unserer Partnerfirmen<br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+      <p>Hier folgen die Logos unserer Partnerfirmen</p>
     </div>
     <div class="container" id="Philosophie">
       <h2>Philosophie</h2>
