--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="stylesheet.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+  <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+  <script language="javascript" type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <header class="container" id="Header">
@@ -194,28 +197,28 @@
         </details>
       </div>
       <div class="Bewerbungsformular">
-        <p>Anrede:</p>
+        <h4>Anrede:</h4>
         <select name="Anrede" required>
           <option value="Herr">Herr</option>
           <option value="Frau">Frau</option>
         </select>
-        <p>Vorname:</p>
+        <h4>Vorname:</h4>
         <input id="vorname" type="text" placeholder="Vorname" required></input>
-        <p>Nachname:</p>
+        <h4>Nachname:</h4>
         <input id="nachname" type="text" placeholder="Nachname" required></input>
-        <p>Straße und Hausnummer:</p>
+        <h4>Straße und Hausnummer:</h4>
         <input id="straße" type="text" placeholder="Straße, Nr."></input>
-        <p>PLZ:</p>
+        <h4>PLZ:</h4>
         <input id="plz" type="text" placeholder="Postleitzahl"></input>
-        <p>Ort:</p>
+        <h4>Ort:</h4>
         <input id="ort" type="text" placeholder="Ort"></input>
-        <p>E-Mail:</p>
+        <h4>E-Mail:</h4>
         <input id="email" type="email" placeholder="E-Mail" required></input>
-        <p>Anschreiben:</p>
+        <h4>Anschreiben:</h4>
         <input id="anschreiben" type="file" accept="application/pdf" required></input>
-        <p>Lebenslauf:</p>
+        <h4>Lebenslauf:</h4>
         <input id="lebenslauf" type="file" accept="application/pdf" required></input>
-        <p>Weitere Unterlagen:</p>
+        <h4>Weitere Unterlagen:</h4>
         <input id="unterlagen" type="file"accept="application/pdf"></input>
         <br><br>
         <input type="reset" value="Senden"></input>
