--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="stylesheet.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
   <script language="javascript" type="text/javascript" src="script.js"></script>
 </head>
@@ -197,28 +197,28 @@
         </details>
       </div>
       <div class="Bewerbungsformular">
-        <h4>Anrede:</h4>
+        <h3>Anrede:</h3>
         <select name="Anrede" required>
           <option value="Herr">Herr</option>
           <option value="Frau">Frau</option>
         </select>
-        <h4>Vorname:</h4>
+        <h3>Vorname:</h3>
         <input id="vorname" type="text" placeholder="Vorname" required></input>
-        <h4>Nachname:</h4>
+        <h3>Nachname:</h3>
         <input id="nachname" type="text" placeholder="Nachname" required></input>
-        <h4>Straße und Hausnummer:</h4>
+        <h3>Straße und Hausnummer:</h3>
         <input id="straße" type="text" placeholder="Straße, Nr."></input>
-        <h4>PLZ:</h4>
+        <h3>PLZ:</h3>
         <input id="plz" type="text" placeholder="Postleitzahl"></input>
-        <h4>Ort:</h4>
+        <h3>Ort:</h3>
         <input id="ort" type="text" placeholder="Ort"></input>
-        <h4>E-Mail:</h4>
+        <h3>E-Mail:</h3>
         <input id="email" type="email" placeholder="E-Mail" required></input>
-        <h4>Anschreiben:</h4>
+        <h3>Anschreiben:</h3>
         <input id="anschreiben" type="file" accept="application/pdf" required></input>
-        <h4>Lebenslauf:</h4>
+        <h3>Lebenslauf:</h3>
         <input id="lebenslauf" type="file" accept="application/pdf" required></input>
-        <h4>Weitere Unterlagen:</h4>
+        <h3>Weitere Unterlagen:</h3>
         <input id="unterlagen" type="file"accept="application/pdf"></input>
         <br><br>
         <input type="reset" value="Senden"></input>
