--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Menü-->
     <navbar id=Menü>
       <ul>
-        <li><a href="#Header">Start</a></li>
+        <li><a href="#Slider">Start</a></li>
         <li><a href="#Referenzen">Referenzen</a></li>
         <li><a href="#Portfolio">Portfolio</a></li>
         <li><a href="#Leistungen">Leistungen</a></li>
@@ -30,6 +30,7 @@
     <img id="menubutton" src="images/menu.png" alt="menubutton">
   </header>
   <main>
+    <div id="Slider"></div>
     <div class="container" id="Referenzen">
       <h2>Referenzen</h2>
       <div class="banner">
