--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@
     </div>
     <div class="container" id="Impressum">
       <h3>Impressum</h3>
+      <h3>HFW Architekten</h3>
+      <p>Rheingaustraße 140</p><p>65203 Wiesbaden</p><p> Tel.: 0611 - 12 34 56 - 0</p><p>Fax: 0611 - 56 34 12 - 10</p><p>architekten@hfw.de</p>
+      <h3>Geschäftsführung</h3>
+      <p>Daniela Hahn</p><p>Isabell Freund</p><p>Celine Werner</p>
+      <h3>Berufsbezeichnung</h3>
+      <p>Architekt</p>
+      <h3>Zuständige Kammer</h3>
+      <p>Architektenkammer Hessen</p><p>Bierstadter Straße 2</p><p>65189 Nordost</p><p>Tel.: 0611 - 17 38 0</p>
+      <h3>Haftungshinweis</h3>
+      <p>Trotz sorgfältiger inhaltilicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschliesslich deren Besitzer veranwortlich.</p>
+      <h3>Rechtlicher Hinweis</h3>
+      <p>Die auf dieser Seite befindlichen Inhalte sind urheberrechtlich geschützt.</p>
     </div>
   </main>
 </body>
