--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <h2>Team</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle team">
-          <img src="images/Celine_web.jpg" alt="Celine Werner" />
+          <img src="images/Celine_web2.jpg" alt="Celine Werner" />
           <figcaption>
             <h2>Celine Werner</h2>
             <p>Studium der Architektur an der Hochschule RheinMain Abschluss 2017</p>
@@ -138,7 +138,7 @@
           </figcaption>
         </figure>
         <figure class="hovertitle team">
-          <img src="images/Isa_web.jpg" alt="Isabell Freund" />
+          <img src="images/Isa_web2.jpg" alt="Isabell Freund" />
           <figcaption>
             <h2>Isabell Freund</h2>
             <p>Innenarchitekturstudium Hochschule RheinMain</p>
@@ -147,7 +147,7 @@
           </figcaption>
         </figure>
         <figure class="hovertitle team">
-          <img src="images/Daniela_web.jpg" alt="Daniela Hahn" />
+          <img src="images/Daniela_web2.jpg" alt="Daniela Hahn" />
           <figcaption>
             <h2>Daniela Hahn</h2>
             <p>Studium der Architektur Hochschule RheinMain</p>
@@ -246,18 +246,18 @@
     </div>
     <div class="container" id="Impressum">
       <h3>Impressum</h3>
-      <h3>HFW Architekten</h3>
+      <div class="impressum">
+      <h4>HFW Architekten</h4>
       <p>Rheingaustraße 140</p><p>65203 Wiesbaden</p><p> Tel.: 0611 - 12 34 56 - 0</p><p>Fax: 0611 - 56 34 12 - 10</p><p>architekten@hfw.de</p>
-      <h3>Geschäftsführung</h3>
+      <h4>Geschäftsführung</h4>
       <p>Daniela Hahn</p><p>Isabell Freund</p><p>Celine Werner</p>
-      <h3>Berufsbezeichnung</h3>
-      <p>Architekt</p>
-      <h3>Zuständige Kammer</h3>
+      <h4>Zuständige Kammer</h4>
       <p>Architektenkammer Hessen</p><p>Bierstadter Straße 2</p><p>65189 Nordost</p><p>Tel.: 0611 - 17 38 0</p>
-      <h3>Haftungshinweis</h3>
+      <h4>Haftungshinweis</h4>
       <p>Trotz sorgfältiger inhaltilicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschliesslich deren Besitzer veranwortlich.</p>
-      <h3>Rechtlicher Hinweis</h3>
-      <p>Die auf dieser Seite befindlichen Inhalte sind urheberrechtlich geschützt.</p>
+      <h4>Rechtlicher Hinweis</h4>
+      <p>Die auf dieser Seite befindlichen Inhalte sind urheberrechtlich geschützt. Unerlaubte Vervielfältigung, Verkauf oder Missbrauch sind untersagt; alle Rechte vorbehalten.</p>
+    </div>
     </div>
   </main>
 </body>
