--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
       <h2>Philosophie</h2>
       <div class="nichtbreiter">
         <p>Ein Gebäude muss nicht nur seinen Zweck durch funktionierende Architektur erfüllen können, es soll sich auch von anderen Gebäuden abheben und die Einzigartigkeit und Vielfältigkeit der Architektur widerspiegeln. Unser Ziel ist es deswegen nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
-          <p>Auch die Erhaltung der Umwelt ist für uns ein wichtiges Thema. Wir konzipieren unsere Gebäude stets so, dass sie energiesparend und nachhaltig gebaut werden.</p>
-          <p>Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.
-</p>
+          Auch die Erhaltung der Umwelt ist für uns ein wichtiges Thema. Wir konzipieren unsere Gebäude stets so, dass sie energiesparend und nachhaltig gebaut werden.</p>
+          Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.</p>
       </div>
     </div>
     <div class="container" id="Team">
@@ -160,8 +159,11 @@
     <div class="container " id="Kontakt">
       <h2>Kontakt</h2>
       <div class="kontakt nichtbreiter">
-        <p>HWF Architekten<br>
-            Rheingaustraße 140, 65203 Wiesbaden</p>
+        <p>HFW Architekten<br>
+            Rheingaustraße 140, 65203 Wiesbaden<br>
+            Tel.: 0611 - 12 34 56 - 0<br>
+            Fax: 0611 - 56 34 12 - 10<br>
+            E-Mail: <a href="mailto:architekten@hfw.de">architekten@hfw.de</a></p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10859.238908785474!2d8.221875630936767!3d50.040600324601535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd960d1b00407f%3A0x652e94e96b5777b8!2sSchloss+Biebrich!5e0!3m2!1sde!2sde!4v1541119845137" allowfullscreen></iframe>
       </div>
     </div>
@@ -248,11 +250,18 @@
       <h3>Impressum</h3>
       <div class="impressum">
       <h4>HFW Architekten</h4>
-      <p>Rheingaustraße 140</p><p>65203 Wiesbaden</p><p> Tel.: 0611 - 12 34 56 - 0</p><p>Fax: 0611 - 56 34 12 - 10</p><p>architekten@hfw.de</p>
+      <p>Rheingaustraße 140<br>
+        65203 Wiesbaden<br>
+        Tel.: 0611 - 12 34 56 - 0<br>
+        Fax: 0611 - 56 34 12 - 10<br>
+        <a href=mailto:"architekten@hfw.de">architekten@hfw.de</a></p>
       <h4>Geschäftsführung</h4>
-      <p>Daniela Hahn</p><p>Isabell Freund</p><p>Celine Werner</p>
+      <p>Daniela Hahn<br>Isabell Freund<br>Celine Werner</p>
       <h4>Zuständige Kammer</h4>
-      <p>Architektenkammer Hessen</p><p>Bierstadter Straße 2</p><p>65189 Nordost</p><p>Tel.: 0611 - 17 38 0</p>
+      <p>Architektenkammer Hessen<br>
+        Bierstadter Straße 2<br>
+        65189 Nordost<br>
+        Tel.: 0611 - 17 38 0</p>
       <h4>Haftungshinweis</h4>
       <p>Trotz sorgfältiger inhaltilicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschliesslich deren Besitzer veranwortlich.</p>
       <h4>Rechtlicher Hinweis</h4>
