--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
       <h2>Philosophie</h2>
       <div class="nichtbreiter">
         <p>Ein Gebäude muss nicht nur seinen Zweck durch funktionierende Architektur erfüllen können, es soll sich auch von anderen Gebäuden abheben und die Einzigartigkeit und Vielfältigkeit der Architektur widerspiegeln. Unser Ziel ist es deswegen nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
-          <p>Auch die Erhaltung der Umwelt ist für uns ein wichtiges Thema. Wir konzipieren unsere Gebäude stets so, dass sie energiesparend und nachhaltig gebaut werden.</p>
-          <p>Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.
-</p>
+        <p>Auch die Erhaltung der Umwelt ist für uns ein wichtiges Thema. Wir konzipieren unsere Gebäude stets so, dass sie energiesparend und nachhaltig gebaut werden.</p>
+        <p>Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.</p>
       </div>
     </div>
     <div class="container" id="Team">
