--- a/index.html
+++ b/index.html
@@ -48,36 +48,42 @@
       <h2>Portfolio</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle portfolio">
+          <img src="images/archi1.jpg" alt="Archi1" />
           <figcaption>
             <h2>HTML</h2>
             <p>Tutorial</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
+          <img src="images/archi2.jpg" alt="Haus" />
           <figcaption>
             <h2>HTML</h2>
             <p>Tutorial</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
+          <img src="images/archi3.jpg" alt="Haus" />
           <figcaption>
             <h2>HTML</h2>
             <p>Tutorial</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
+          <img src="images/archi4.jpg" alt="Haus" />
           <figcaption>
             <h2>HTML</h2>
             <p>Tutorial</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
+          <img src="images/archi5.jpg" alt="Haus" />
           <figcaption>
             <h2>HTML</h2>
             <p>Tutorial</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
+          <img src="images/archi6.jpg" alt="Haus" />
           <figcaption>
             <h2>HTML</h2>
             <p>Tutorial</p>
