--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
       <h2>Partner</h2>
       <div class="banner">
         <div class="logos nichtbreiter">
-          <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
-          <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
-          <div class="logo"><img src="https://di-uploads-pod4.dealerinspire.com/rivercityhyundai/uploads/2017/05/HyundaiLogoStacked_4cblk-1024x659.gif" alt=""></div>
+          <div class="logo"><img src="./images/partner1.png" alt="Gass Immobilien"></div>
+          <div class="logo"><img src="./images/partner2.png" alt="Sparkasse"></div>
+          <div class="logo"><img src="./images/partner3.png" alt="Galabau"></div>
         </div>
       </div>
     </div>
