portfolio text hover

--- a/index.html
+++ b/index.html
@@ -48,46 +48,51 @@
       <h2>Portfolio</h2>
       <div class="galerie nichtbreiter">
         <figure class="hovertitle portfolio">
-          <img src="images/archi1.jpg" alt="Archi1" />
+          <img src="images/archi1.jpg" alt="EYE Film Instituut Nederland" />
           <figcaption>
-            <h2>HTML</h2>
-            <p>Tutorial</p>
+            <h2>Eye Film Instituut Nederland Amsterdam</h2>
+            <p>Neubau und Modernisierung<br>
+              Planung und Realisierung: 2018 </p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi2.jpg" alt="Hyundai" />
           <figcaption>
-            <h2>Hyundai</h2>
-            <p>Neubau Glasgebäude<br>
-              Realisierung: </p>
+            <h2>Hyundai Frankfurt</h2>
+            <p>Neubau Bürogebäude<br>
+              Planung und Realisierung: 2017-2018</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi3.jpg" alt="Hyundai" />
           <figcaption>
-            <h2>Hyundai</h2>
-            <p>Tutorial</p>
+            <h2>Hyundai Frankfurt</h2>
+            <p>Neubau Bürogebäude<br>
+              Planung und Realisierung: 2017-2018</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi4.jpg" alt="Haus" />
           <figcaption>
-            <h2>HTML</h2>
-            <p>Tutorial</p>
+            <h2>Palau de les Arts Reina Sofia Valencia</h2>
+            <p>Modernisierung<br>
+              Planung und Realisierung: 2017</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
           <img src="images/archi5.jpg" alt="Haus" />
           <figcaption>
-            <h2>HTML</h2>
-            <p>Tutorial</p>
+            <h2>Goethe Universität Frankfurt</h2>
+            <p>Modernisierung<br>
+              Planung und Realisierung: 2017</p>
           </figcaption>
         </figure>
         <figure class="hovertitle portfolio">
-          <img src="images/archi6.jpg" alt="Haus" />
+          <img src="images/archi6.jpg" alt="NEMO Museum" />
           <figcaption>
-            <h2>HTML</h2>
-            <p>Tutorial</p>
+            <h2>NEMO Museum Amsterdam</h2>
+            <p>Umbau<br>
+              Planung und Realisierung: 2017-2018</p>
           </figcaption>
         </figure>
       </div>
@@ -123,7 +128,6 @@
         <p>Ein Gebäude muss nicht nur seinen Zweck durch funktionierende Architektur erfüllen können, es soll sich auch von anderen Gebäuden abheben und die Einzigartigkeit und Vielfältigkeit der Architektur widerspiegeln. Unser Ziel ist es deswegen nicht nur funktionierende Gebäude zu entwerfen, sondern diesen Gebäuden auch durch gutes Design Leben einzuhauchen. Gebäude sollen nicht nur Lebens- oder Arbeitsraum, sondern auch Wohlgefühl und Sicherheit für die Menschen, die darin leben oder      arbeiten, bieten.</p>
         <p>Auch die Erhaltung der Umwelt ist für uns ein wichtiges Thema. Wir konzipieren unsere Gebäude stets so, dass sie energiesparend und nachhaltig gebaut werden.</p>
           <p>Vor allem legen wir aber Wert darauf, dass unsere Kunden ein gutes und sicheres Gefühl über unsere Arbeit haben, denn die Kommunikation und das Vertrauen zwischen den Architekten und dem Bauherrn bzw. der Bauherrin ist die wichtigste Grundlage für gute Architektur.</p>
->>>>>>> 66a3f32986cecac2be0fdd98186e28d9582cf36e
       </div>
     </div>
     <div class="container" id="Team">
