Navbar verschwindet nicht mehr

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script language="javascript" type="text/javascript" src="script.js"></script>
 </head>
 <body>
-  <header class="container" id="Header">
+  <header id="Header">
     <h1>HFW Architekten</h1>
     <!--Menü-->
     <img id="menubutton" src="images/menu.png" alt="menubutton">
