--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <h2>Referenzen</h2>
       <div class="banner">
         <div class="logos nichtbreiter">
-          <div class="logo"><img src="images/ref6.png" alt="Goethe Universität"></div>
-          <div class="logo"><img src="images/ref5.png" alt="VLA Valencia"></div>
-          <div class="logo"><img src="images/ref4.png" alt="Hyundai"></div>
-          <div class="logo"><img src="images/ref3.png" alt="Science Museum"></div>
-          <div class="logo"><img src="images/ref2.png" alt="Montpellier"></div>
-          <div class="logo"><img src="images/REF1.png" alt="Eye Film Instituut Nederland"></div>
+          <div class="logo"><a href="http://www.uni-frankfurt.de/de?locale=de"><img src="images/ref6.png" alt="Goethe Universität"></a></div>
+          <div class="logo"><a href="https://www.lesarts.com/"><img src="images/ref5.png" alt="Stadt Valencia"></a></div>
+          <div class="logo"><a href="https://www.hyundai.de/"><img src="images/ref4.png" alt="Hyundai"></a></div>
+          <div class="logo"><a href="https://www.lesarts.com/> <img src="images/ref3.png" alt="Nemo Science Museum"></a></div>
+          <div class="logo"><a href="https://www.montpellier.fr/570-hotel-de-ville.htm"><img src="images/ref2.png" alt="Montpellier"></a></div>
+          <div class="logo"><a href="https://www.eyefilm.nl/"><img src="images/REF1.png" alt="Eye Film Instituut Nederland"></a></div>
         </div>
       </div>
     </div>
@@ -111,9 +111,9 @@
       <h2>Partner</h2>
       <div class="banner">
         <div class="logos nichtbreiter">
-          <div class="logo"><img src="./images/partner1.png" alt="Gass Immobilien"></div>
-          <div class="logo"><img src="./images/partner2.png" alt="Sparkasse"></div>
-          <div class="logo"><img src="./images/partner3.png" alt="Galabau"></div>
+          <div class="logo"><a href="#" ><img src="./images/partner1.png" alt="Gass Immobilien"></a></div>
+          <div class="logo"><a href="https://www.deutsche-bank.de/gk.html" ><img src="./images/partner4.png" alt="Deutsche Bank"></a></div>
+          <div class="logo"><a href="https://www.galabau.de/" ><img src="./images/partner3.png" alt="Galabau"></a></div>
         </div>
       </div>
     </div>
