--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
       <h2>Kontakt</h2>
       <div class="kontakt nichtbreiter">
         <p>HFW Architekten<br>
-            Rheingaustraße 140, 65203 Wiesbaden<br>
+            Rheingaustraße 140<br>
+            65203 Wiesbaden<br>
             Tel.: 0611 - 12 34 56 - 0<br>
             Fax: 0611 - 56 34 12 - 10<br>
             E-Mail: <a href="mailto:architekten@hfw.de">architekten@hfw.de</a></p>
