--- a/index.html
+++ b/index.html
@@ -225,37 +225,37 @@
         </details>
       </div>
       <div class="Bewerbungsformular">
-        <div><h3>Anrede:</h3>
-        <select class="formularfeld" name="Anrede" required>
+        <div class="drittel"><h3>Anrede:</h3>
+        <select class="formularfeld " name="Anrede" required>
           <option value="Herr">Herr</option>
           <option value="Frau">Frau</option>
         </select>
         </div>
-        <div><h3>Vorname:</h3>
+        <div class="drittel"><h3>Vorname:</h3>
         <input class="formularfeld" id="vorname" type="text" placeholder="Vorname" required></input>
         </div>
-        <div><h3>Nachname:</h3>
+        <div class="drittel"><h3>Nachname:</h3>
         <input class="formularfeld" id="nachname" type="text" placeholder="Nachname" required></input>
         </div>
-        <div><h3>Straße und Hausnummer:</h3>
+        <div class="drittel"><h3>Straße und Hausnummer:</h3>
         <input class="formularfeld" id="straße" type="text" placeholder="Straße, Nr."></input>
         </div>
-        <div><h3>PLZ:</h3>
+        <div class="drittel"><h3>PLZ:</h3>
         <input class="formularfeld" id="plz" type="text" placeholder="Postleitzahl"></input>
         </div>
-        <div><h3>Ort:</h3>
+        <div class="drittel"><h3>Ort:</h3>
         <input class="formularfeld" id="ort" type="text" placeholder="Ort"></input>
         </div>
         <div class="breit"><h3>E-Mail:</h3>
         <input class="formularfeld" id="email" type="email" placeholder="E-Mail" required></input>
         </div>
-        <div><h3>Anschreiben:</h3>
+        <div class="drittel"><h3>Anschreiben:</h3>
         <input id="anschreiben" type="file" accept="application/pdf" required></input>
         </div>
-        <div><h3>Lebenslauf:</h3>
+        <div class="drittel"><h3>Lebenslauf:</h3>
         <input id="lebenslauf" type="file" accept="application/pdf" required></input>
         </div>
-        <div><h3>Weitere Unterlagen:</h3>
+        <div class="drittel"><h3>Weitere Unterlagen:</h3>
         <input id="unterlagen" type="file"accept="application/pdf"></input>
         </div>
         <br><br>
