--- a/index.html
+++ b/index.html
@@ -225,41 +225,65 @@
         </details>
       </div>
       <div class="Bewerbungsformular">
-        <div class="drittel"><h3>Anrede:</h3>
-        <select class="formularfeld " name="Anrede" required>
-          <option value="Herr">Herr</option>
-          <option value="Frau">Frau</option>
-        </select>
+        <div class="drittel">
+          <h3>Anrede:</h3>
+          <select class="formularfeld " name="Anrede" required>
+            <option value="Herr">Herr</option>
+            <option value="Frau">Frau</option>
+          </select>
         </div>
-        <div class="drittel"><h3>Vorname:</h3>
-        <input class="formularfeld" id="vorname" type="text" placeholder="Vorname" required></input>
+        <div class="drittel">
+          <h3>Vorname:</h3>
+          <input class="formularfeld" id="vorname" type="text" placeholder="Vorname" required></input>
         </div>
-        <div class="drittel"><h3>Nachname:</h3>
-        <input class="formularfeld" id="nachname" type="text" placeholder="Nachname" required></input>
+        <div class="drittel">
+          <h3>Nachname:</h3>
+          <input class="formularfeld" id="nachname" type="text" placeholder="Nachname" required></input>
         </div>
-        <div class="drittel"><h3>Straße und Hausnummer:</h3>
-        <input class="formularfeld" id="straße" type="text" placeholder="Straße, Nr."></input>
+        <div class="drittel">
+          <h3>Straße und Hausnummer:</h3>
+          <input class="formularfeld" id="straße" type="text" placeholder="Straße, Nr."></input>
         </div>
-        <div class="drittel"><h3>PLZ:</h3>
-        <input class="formularfeld" id="plz" type="text" placeholder="Postleitzahl"></input>
+        <div class="drittel">
+          <h3>PLZ:</h3>
+          <input class="formularfeld" id="plz" type="text" placeholder="Postleitzahl"></input>
         </div>
-        <div class="drittel"><h3>Ort:</h3>
-        <input class="formularfeld" id="ort" type="text" placeholder="Ort"></input>
+        <div class="drittel">
+          <h3>Ort:</h3>
+          <input class="formularfeld" id="ort" type="text" placeholder="Ort"></input>
         </div>
-        <div class="breit"><h3>E-Mail:</h3>
-        <input class="formularfeld" id="email" type="email" placeholder="E-Mail" required></input>
+        <div class="drittel">
+          <h3>Anschreiben:</h3>
+          <div class="file-upload">
+            <label for="anschreiben" class="file-upload__label">Datei auswählen</label>
+            <input id="anschreiben" class="file-upload__input" type="file" name="file-upload" accept="application/pdf" required>
+          </div>
         </div>
-        <div class="drittel"><h3>Anschreiben:</h3>
-        <input id="anschreiben" type="file" accept="application/pdf" required></input>
+        <div class="drittel">
+          <h3>Lebenslauf:</h3>
+          <div class="file-upload">
+            <label for="lebenslauf" class="file-upload__label">Datei auswählen</label>
+            <input id="lebenslauf" class="file-upload__input" type="file" name="file-upload" accept="application/pdf" required>
+          </div>
         </div>
-        <div class="drittel"><h3>Lebenslauf:</h3>
-        <input id="lebenslauf" type="file" accept="application/pdf" required></input>
+        <div class="drittel">
+          <h3>Weitere Unterlagen:</h3>
+          <div class="file-upload">
+            <label for="unterlagen" class="file-upload__label">Datei auswählen</label>
+            <input id="unterlagen" class="file-upload__input" type="file" name="file-upload" accept="application/pdf" required>
+          </div>
         </div>
-        <div class="drittel"><h3>Weitere Unterlagen:</h3>
-        <input id="unterlagen" type="file"accept="application/pdf"></input>
+        <div class="drittel">
+          <h3>E-Mail:</h3>
+          <input class="formularfeld" id="email" type="email" placeholder="E-Mail" required></input>
         </div>
-        <br><br>
-        <input type="reset" value="Senden"></input>
+        <div class="drittel">
+          <h3>Telefonnr.:</h3>
+          <input class="formularfeld" id="mobil" type="number" placeholder="Telefonnr." required></input>
+        </div>
+        <div class="drittel">
+          <button id="send" type="button">Senden</button>
+        </div>
       </div>
     </div>
     <div class="container" id="Impressum">
