--- a/index.html
+++ b/index.html
@@ -135,16 +135,28 @@
         <figure class="hovertitle team">
           <img src="images/Celine_web2.jpg" alt="Celine Werner" />
           <figcaption>
+            <h2>Celine Werner</h2><br><br>
+            <p>Studium der Architektur an der Hochschule RheinMain Abschluss 2017 <br><br>
+               2 Jahre Erfahrung <br>im Planen und Bauen<br><br>
+               Schwerpunkt der Arbeit: Entwurf, Bauantrag, Ausführungsplanung</p>
           </figcaption>
         </figure>
         <figure class="hovertitle team">
           <img src="images/Isa_web2.jpg" alt="Isabell Freund" />
           <figcaption>
+            <h2>Isabell Freund</h2><br><br>
+            <p>Innenarchitekturstudium Hochschule RheinMain<br><br>
+               Bachelor of Arts Innenarchitektur 2017<br><br>
+               Schwerpunkt der Arbeit: Innenraumkonzept, Entwurf, Detailplanung, Ausschreibung</p>
           </figcaption>
         </figure>
         <figure class="hovertitle team">
           <img src="images/Daniela_web2.jpg" alt="Daniela Hahn" />
           <figcaption>
+            <h2>Daniela Hahn</h2><br><br>
+            <p>Studium der Architektur Hochschule RheinMain<br><br>
+               Bauzeichnerin seit 2015<br><br>
+               Schwerpunkt der Arbeit: CAD, 3D, BIM- Technologie, Rendering, Systemadmin</p>
           </figcaption>
         </figure>
       </div>
@@ -168,18 +180,22 @@
           <summary>Architekt/in Projektleitung</summary>
           <p>Zur Verstärkung unseres Teams suchen wir zum nächstmöglichen Zeitpunkt eine/n<br><br>
 
+            <strong>engagierte/n Architekt/in als Projektleitung</strong><br><br>
 
+            <strong>Ihre Aufgaben:</strong><br>
             + insbesondere Entwurfsplanung, Genehmigungsplanung, Detail- und Ausführungsplanung<br>
             + Kommunikation und Abstimmung mit internen und externen Projektbeteiligten wie Fachplanern und Bauleitern sowie Vertretung der Projekte gegenüber Auftraggebern<br>
             + Projektorganisation und Planungsoptimierung<br>
             + Terminplanung und Budgetkontrolle<br>
             + Eigenverantwortliche Führung des Projekts und Leitung des Planungsteams<br><br>
 
+            <strong>Wir erwarten:</strong><br>
             + ein erfolgreich abgeschlossenes Studium der Architektur<br>
             + sehr gute Entwurfsfertigkeiten und Fachkenntnisse in der Ausführungsplanung<br>
             + Motivation, Belastbarkeit und Teamfähigkeit<br>
             + mindestens drei Jahre Berufserfahrung<br><br>
 
+            <strong>Wir bieten:</strong><br>
             + eine abwechslungsreiche Tätigkeit in Festanstellung<br>
             + moderne Büroräume in zentraler Lage unweit des Wiesbadener Hauptbahnhofs<br>
             + ein hoch motiviertes und nettes Team, flache Hierarchien und ein angenehmes Betriebsklima<br>
@@ -189,15 +205,19 @@
           <summary>Bauleiter/in</summary>
           <p>Zur Verstärkung unseres Teams suchen wir zum nächstmöglichen Zeitpunkt in Vollzeit eine/n<br><br>
 
+            <strong> eine/n erfahrene/n Bauleiter/in für die Leistungsphasen 6 - 8
+            </strong><br><br>
 
             Wir erwarten sehr gute Fachkenntnisse, Belastbarkeit und Teamfähigkeit sowie ausreichende Berufserfahrung (mindestens 3 Jahre). <br><br>
 
+            <strong>Ihre Aufgaben:</strong><br>
             + Ausschreibung<br>
             + Objektüberwachung<br>
             + Abrechnung /Nachtragsprüfung- und Verhandlung<br>
             + Kostenkontrolle<br>
             + Terminplanung<br><br>
 
+            <strong>Wir bieten:</strong><br>
             + eine abwechslungsreiche Tätigkeit in Festanstellung<br>
             + moderne Büroräume in zentraler Lage unweit des Wiesbadener Hauptbahnhofs<br>
             + ein hoch motiviertes und nettes Team, flache Hierarchien und ein angenehmes Betriebsklima<br>
