Alles in Ordnung

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </navbar>
   </header>
   <main>
-    <div id="Slider"></div>
+    <div id="Slider">
+    </div>
     <div class="container" id="Referenzen">
       <h2>Referenzen</h2>
       <div class="banner">
