--- a/index.html
+++ b/index.html
@@ -265,23 +265,25 @@
     <div class="container" id="Impressum">
       <h3>Impressum</h3>
       <div class="impressum">
-      <h4>HFW Architekten</h4>
+      <div>
+      <div><h4>HFW Architekten</h4>
       <p>Rheingaustraße 140<br>
         65203 Wiesbaden<br>
         Tel.: 0611 - 12 34 56 - 0<br>
         Fax: 0611 - 56 34 12 - 10<br>
-        <a href=mailto:"architekten@hfw.de">architekten@hfw.de</a></p>
-      <h4>Geschäftsführung</h4>
-      <p>Daniela Hahn<br>Isabell Freund<br>Celine Werner</p>
-      <h4>Zuständige Kammer</h4>
+        <a href=mailto:"architekten@hfw.de">architekten@hfw.de</a></p></div>
+      <div><h4>Geschäftsführung</h4>
+      <p>Daniela Hahn<br>Isabell Freund<br>Celine Werner</p></div>
+      <div><h4>Zuständige Kammer</h4>
       <p>Architektenkammer Hessen<br>
         Bierstadter Straße 2<br>
         65189 Nordost<br>
-        Tel.: 0611 - 17 38 0</p>
-      <h4>Haftungshinweis</h4>
-      <p>Trotz sorgfältiger inhaltilicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschliesslich deren Besitzer veranwortlich.</p>
-      <h4>Rechtlicher Hinweis</h4>
-      <p>Die auf dieser Seite befindlichen Inhalte sind urheberrechtlich geschützt. Unerlaubte Vervielfältigung, Verkauf oder Missbrauch sind untersagt; alle Rechte vorbehalten.</p>
+        Tel.: 0611 - 17 38 0</p></div>
+      <div><h4>Haftungshinweis</h4>
+      <p>Trotz sorgfältiger inhaltilicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschliesslich deren Besitzer veranwortlich.</p></div>
+      <div><h4>Rechtlicher Hinweis</h4>
+      <p>Die auf dieser Seite befindlichen Inhalte sind urheberrechtlich geschützt. Unerlaubte Vervielfältigung, Verkauf oder Missbrauch sind untersagt; alle Rechte vorbehalten.</p></div>
+    </div>
     </div>
     </div>
   </main>
