--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 </head>
 <body>
   <header id="Header">
-    <h1>HFW Architekten</h1>
-    <!--Menü-->
-    <img id="menubutton" src="images/menu.png" alt="menubutton">
-    <navbar id=Menü>
-      <ul>
-        <li><a href="#Slider">Start</a></li>
-        <li><a href="#Referenzen">Referenzen</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#Leistungen">Leistungen</a></li>
-        <li><a href="#Partner">Partner</a></li>
-        <li><a href="#Philosophie">Philosophie</a></li>
-        <li><a href="#Team">Team</a></li>
-        <li><a href="#Kontakt">Kontakt</a></li>
-        <li><a href="#Karriere">Karriere</a></li>
-        <li><a href="#Impressum">Impressum</a></li>
-    </ul>
-    </navbar>
+    <div class="headerinhalt nichtbreiter">
+      <h1>HFW Architekten</h1>
+      <!--Menü-->
+      <img id="menubutton" src="images/menu.png" alt="menubutton">
+      <navbar id=Menü>
+        <ul>
+          <li><a href="#Slider">Start</a></li>
+          <li><a href="#Referenzen">Referenzen</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Leistungen">Leistungen</a></li>
+          <li><a href="#Partner">Partner</a></li>
+          <li><a href="#Philosophie">Philosophie</a></li>
+          <li><a href="#Team">Team</a></li>
+          <li><a href="#Kontakt">Kontakt</a></li>
+          <li><a href="#Karriere">Karriere</a></li>
+          <li><a href="#Impressum">Impressum</a></li>
+      </ul>
+      </navbar>
+    </div>
   </header>
   <main>
     <div id="Slider">
@@ -225,7 +227,7 @@
             + fachliche und persönliche Entwicklung unserer Mitarbeiter durch Weiterbildung und ein hohes Maß an eigenverantwortlicher Tätigkeit</p>
         </details>
       </div>
-      <div class="Bewerbungsformular">
+      <div class="Bewerbungsformular nichtbreiter">
         <div class="drittel">
           <h3>Anrede:</h3>
           <select class="formularfeld " name="Anrede" required>
@@ -288,8 +290,8 @@
       </div>
     </div>
     <div class="container" id="Impressum">
-      <h3>Impressum</h3>
-      <div class="impressum">
+      <h3 class="mitte">Impressum</h3>
+      <div class="impressum nichtbreiter">
       <div class="drittel">
         <h4>HFW Architekten</h4>
         <p>Rheingaustraße 140<br>
