--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <h3>Weitere Unterlagen:</h3>
           <div class="file-upload">
             <label for="unterlagen" class="file-upload__label">Datei auswählen</label>
-            <input id="unterlagen" class="file-upload__input" type="file" name="file-upload" accept="application/pdf" required>
+            <input id="unterlagen" class="file-upload__input" type="file" name="file-upload" accept="application/pdf">
           </div>
         </div>
         <div class="drittel">
@@ -282,7 +282,7 @@
         </div>
         <div class="drittel">
           <h3>Telefonnr.:</h3>
-          <input class="formularfeld" id="mobil" type="number" placeholder="Telefonnr." required></input>
+          <input class="formularfeld" id="mobil" type="text" placeholder="Telefonnr."></input>
         </div>
         <div class="drittel">
           <button id="send" type="button">Senden</button>
